# creating-an-os-project-in-python

./: .pre-commit-config.yaml  pyproject.toml  reminder.py  tests.py
