[project]
name = "my-poetry-project"
version = "0.1.0"
description = "Open source project in Python"
authors = [
    {name = "Olga Sentsiurova",email = "olga.sentsiurova@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
tox = "^4.24.1"

[tool.poetry]
package-mode = false

